--- a/packages/cameras.yaml
+++ b/packages/cameras.yaml
@@ -2,10 +2,39 @@
 #    @package          :     security_cameras
 #    @description      :     security_cameras and associated automations, etc.
 #####################################################################
-#homeassistant:
-#  customize:
+homeassistant:
+  customize:
+    ################################################
+    ## Node Anchors
+    ################################################
+    package.node_anchors:
+      customize: &customize
+        package: 'cameras'
+
+      contained: &contained
+        <<: *customize
+        haaska_hidden: true
+        homebridge_hidden: true
+
+      exposed: &exposed
+        <<: *customize
+        haaska_hidden: false
+        homebridge_hidden: false
+
+      hidden: &hidden
+        <<: *contained
+        hidden: true
+
+    ################################################
+    ## Group
+    ################################################
+    group.cameras:
+      <<: *contained
 
 
+#####################################################################
+### Group
+#####################################################################
 group:
   Cameras:
     entities:
@@ -19,6 +48,9 @@ group:
       - sensor.north_ptz_sd_used
 
 
+#####################################################################
+### Camera
+#####################################################################
 camera:
 ## FRONT DOOR
   - platform: generic
