--- a/automation/hvac_sliders_cool.yaml
+++ b/automation/hvac_sliders_cool.yaml
@@ -1,16 +1,16 @@
 #####################################################################
 ### Downstairs Input slider temperature adjustment
 #####################################################################
-- alias: downstairs ac temperature adjustment
-  trigger:
-    platform: state
-    entity_id: input_slider.downstairs_ac
-
-  action:
-    - service: climate.set_temperature
-      data_template:
-        entity_id: climate.2gig_technologies_ct101_thermostat_iris_cooling_1_18_2
-        temperature: '{{ states.input_slider.downstairs_ac.state | int }}'
+#- alias: downstairs ac temperature adjustment
+#  trigger:
+#    platform: state
+#    entity_id: input_slider.downstairs_ac
+#
+#  action:
+#    - service: climate.set_temperature
+#      data_template:
+#        entity_id: climate.downstairs
+#        temperature: '{{ states.input_slider.downstairs_ac.state | int }}'
 
 #####################################################################
 ### Upstairs Input slider temperature adjustment
@@ -23,23 +23,23 @@
   action:
     - service: climate.set_temperature
       data_template:
-        entity_id: climate.2gig_technologies_ct101_thermostat_iris_cooling_1_42_2
+        entity_id: climate.upstairs_thermostat_cooling_1
         temperature: '{{ states.input_slider.upstairs_ac.state | int }}'
 
 #####################################################################
 ### Downstairs - Change Input slider adjust to match temperature (downstairs ac)
 #####################################################################
-- alias: downstairs ac input slider
-  hide_entity: True
-  trigger:
-    platform: state
-    entity_id: sensor.hvac_downstairs_ac_setpoint
-
-  action:
-    service: input_slider.select_value
-    data_template:
-      entity_id: input_slider.downstairs_ac
-      value: "{{ states.sensor.hvac_downstairs_ac_setpoint.state | int }}"
+#- alias: downstairs ac input slider
+#  hide_entity: True
+#  trigger:
+#    platform: state
+#    entity_id: sensor.hvac_downstairs_ac_setpoint
+#
+#  action:
+#    service: input_slider.select_value
+#    data_template:
+#      entity_id: input_slider.downstairs_ac
+#      value: "{{ states.sensor.hvac_downstairs_ac_setpoint.state | int }}"
 
 #####################################################################
 ### Upstairs - Change Input slider adjust to match temperature (upstairs ac)
