--- a/automation/hvac_sliders_heat.yaml
+++ b/automation/hvac_sliders_heat.yaml
@@ -2,16 +2,16 @@
 ### Downstairs Input slider temperature adjustment
 #####################################################################
 
-- alias: downstairs heat temperature adjustment
-  trigger:
-    platform: state
-    entity_id: input_slider.downstairs_heat
-
-  action:
-    - service: climate.set_temperature
-      data_template:
-        entity_id: climate.2gig_technologies_ct101_thermostat_iris_heating_1_18_1
-        temperature: '{{ states.input_slider.downstairs_heat.state | int }}'
+#- alias: downstairs heat temperature adjustment
+#  trigger:
+#    platform: state
+#    entity_id: input_slider.downstairs_heat
+#
+#  action:
+#    - service: climate.set_temperature
+#      data_template:
+#        entity_id: climate.2gig_technologies_ct101_thermostat_iris_heating_1_18_1
+#        temperature: '{{ states.input_slider.downstairs_heat.state | int }}'
 
 #####################################################################
 ### Upstairs Input slider temperature adjustment
@@ -25,7 +25,7 @@
   action:
     - service: climate.set_temperature
       data_template:
-        entity_id: climate.2gig_technologies_ct101_thermostat_iris_heating_1_42_1
+        entity_id: climate.upstairs_thermostat_heating_1
         temperature: '{{ states.input_slider.upstairs_heat.state | int }}'
 #        temperature: '{{ trigger.to_state.state | int }}'
 
