--- a/packages/climate_upstairs.yaml
+++ b/packages/climate_upstairs.yaml
@@ -3,42 +3,96 @@
 #    @description      :     climate_upstairs, and associated automations, scenes, etc.
 ############################################################################
 homeassistant:
+  customize_glob:
+    "sensor.hvac*mode":
+      icon: mdi:nest-thermostat
+
   customize:
+    ################################################
+    ## Node Anchors
+    ################################################
+    package.node_anchors:
+      customize: &customize
+        package: 'climate_upstairs'
+
+      contained: &contained
+        <<: *customize
+        haaska_hidden: true
+        homebridge_hidden: true
+
+      exposed: &exposed
+        <<: *customize
+        haaska_hidden: false
+        homebridge_hidden: false
+
+      hidden: &hidden
+        <<: *contained
+        hidden: true
+
+    ################################################
+    ## Group
+    ################################################
     group.upstairs_climate:
-      order: 1
+      <<: *contained
+      #order: 1
 
     group.upstairs_cooling:
-        order: 2
+      <<: *contained
+      #order: 2
 
     group.upstairs_heating:
-      order: 3
+      <<: *contained
+      #order: 3
 
+    script.hvac_operating_mode:
+      <<: *contained
 
-    sensor.2gig_technologies_ct101_thermostat_iris_temperature_42_1:
+    ################################################
+    ## Sensor
+    ################################################
+    sensor.upstairs_thermostat_temperature:
+      <<: *contained
       friendly_name: "Upstairs Temp"
 
-    climate.2gig_technologies_ct101_thermostat_iris_cooling_1_42_2:
-      friendly_name: "Upstairs Cooling Setpoint"
-
-    climate.2gig_technologies_ct101_thermostat_iris_heating_1_42_1:
-      friendly_name: "Upstairs Heating Setpoint"
-
     sensor.hvac_upstairs_op_state:
+      <<: *contained
       icon: mdi:air-conditioner
-      haaska_hidden: true
 
     sensor.hvac_upstairs_fan:
+      <<: *contained
       icon: mdi:fan
-      haaska_hidden: true
 
     sensor.hvac_upstairs_ac_setpoint:
+      <<: *contained
       icon: mdi:snowflake
-      haaska_hidden: true
 
     sensor.hvac_upstairs_heat_setpoint:
+      <<: *contained
       icon: mdi:fire
-      haaska_hidden: true
 
+    sensor.upstairs_thermostat_statistics_mean:
+      <<: *contained
+      friendly_name: Upstairs Thermostat Mean Temp
+      icon: mdi:chart-areaspline
+
+    sensor.hvac_upstairs_climate:
+      <<: *contained
+      icon: mdi:air-conditioner
+
+    ################################################
+    ## Climate
+    ################################################
+    climate.upstairs_thermostat_cooling_1:
+      <<: *contained
+      friendly_name: "Upstairs Cooling Setpoint"
+
+    climate.upstairs_thermostat_heating_1:
+      <<: *contained
+      friendly_name: "Upstairs Heating Setpoint"
+
+    ################################################
+    ## Script
+    ################################################
     script.heat_upstairs_60min:
       friendly_name: "Upstairs Quick Heating"
       entity_picture: /local/flame.png
@@ -47,24 +101,23 @@ homeassistant:
       friendly_name: "Upstairs Quick Cooling"
       entity_picture: /local/snowflake.png
 
+    ################################################
+    ## Input_Slider
+    ################################################
     input_slider.upstairs_heat:
       icon: mdi:nest-thermostat
 
     input_slider.upstairs_ac:
       icon: mdi:nest-thermostat
 
-    sensor.upstairs_thermostat_statistics_mean:
-      friendly_name: Upstairs Thermostat Mean Temp
-      icon: mdi:chart-areaspline
 
-    sensor.hvac_upstairs_climate:
-      icon: mdi:air-conditioner
-
-
+#####################################################################
+### Group
+#####################################################################
 group:
   Upstairs Climate:
     entities:
-      - sensor.2gig_technologies_ct101_thermostat_iris_temperature_42_1
+      - sensor.upstairs_thermostat_temperature
       - sensor.hvac_upstairs_op_state
       - sensor.hvac_upstairs_mode
       - sensor.us_climate_control
@@ -86,50 +139,85 @@ group:
       - script.cool_upstairs_60min
 
 
+#####################################################################
+### Input Slider
+#####################################################################
+input_slider:
+  ### Upstairs Heat Temp Adjustment
+  upstairs_heat:
+    name: "Upstairs Heat"
+    initial: 68
+    min: 60
+    max: 90
+    step: 1
+
+  ### Upstairs AC Temp Adjustment
+  upstairs_ac:
+    name: "Upstairs AC"
+    initial: 83
+    min: 60
+    max: 90
+    step: 1
+
+  ### Upstairs Low Temp trigger - "at what temp is COLD triggered?"
+  us_low:
+    name: "Upstairs Low"
+    initial: 69
+    min: 60
+    max: 90
+    step: 1
+
+  ### Upstairs High Temp trigger - "at what temp is HOT triggered?"
+  us_high:
+    name: "Upstairs High"
+    initial: 83
+    min: 60
+    max: 90
+    step: 1
+
+
+#####################################################################
+### Sensor
+#####################################################################
 sensor:
-#####################################################################
-### HVAC Upstairs
-#####################################################################
 ## Median Temperature Upstairs
   - platform: statistics
-    entity_id: sensor.2gig_technologies_ct101_thermostat_iris_temperature_42_1
+    entity_id: sensor.upstairs_thermostat_temperature
     name: Upstairs Thermostat Statistics
 
   - platform: template
     sensors:
       hvac_upstairs_mode:
         friendly_name: "Upstairs Thermostat Mode"
-        value_template: "{{ states('climate.2gig_technologies_ct101_thermostat_iris_cooling_1_42_2') }}"
+        value_template: "{{ states('climate.upstairs_thermostat_cooling_1') }}"
 
       hvac_upstairs_op_state:
         friendly_name: "Upstairs HVAC State"
-        value_template: "{{ (states.climate['2gig_technologies_ct101_thermostat_iris_cooling_1_42_2'].attributes|default({})).operating_state|default('unknown') }}"
+        value_template: "{{ (states.climate.upstairs_thermostat_cooling_1.attributes|default({})).operating_state|default('unknown') }}"
 
       hvac_upstairs_fan:
         friendly_name: "Upstairs HVAC Fan"
-        value_template: "{{ (states.climate['2gig_technologies_ct101_thermostat_iris_cooling_1_42_2'].attributes|default({})).fan_state|default('unknown') }}"
+        value_template: "{{ (states.climate.upstairs_thermostat_cooling_1.attributes|default({})).fan_state|default('unknown') }}"
 
       hvac_upstairs_ac_setpoint:
         friendly_name: "Upstairs AC Setpoint"
-        value_template: "{{ (states.climate['2gig_technologies_ct101_thermostat_iris_cooling_1_42_2'].attributes|default({})).temperature|default('unknown') }}"
+        value_template: "{{ (states.climate.upstairs_thermostat_cooling_1.attributes|default({})).temperature|default('unknown') }}"
 
       hvac_upstairs_heat_setpoint:
         friendly_name: "Upstairs Heat Setpoint"
-        value_template: "{{ (states.climate['2gig_technologies_ct101_thermostat_iris_heating_1_42_1'].attributes|default({})).temperature|default('unknown') }}"
+        value_template: "{{ (states.climate.upstairs_thermostat_heating_1.attributes|default({})).temperature|default('unknown') }}"
 
-#####################################################################
-### Upstairs Climate Control
-#####################################################################
+## Upstairs Climate Control
   - platform: template
     sensors:
       us_climate_control:
         friendly_name: "Upstairs Climate Control"
         value_template: >-
-          {% set temperature = states('sensor.2gig_technologies_ct101_thermostat_iris_temperature_42_1')|float(none) %}
+          {% set temperature = states('sensor.upstairs_thermostat_temperature')|float(none) %}
           {% set us_low = states.input_slider.us_low.state|default(68)|float %}
           {% set us_high = states.input_slider.us_high.state|default(81)|float %}
           {% if temperature is none %}
-            {{ states('sensor.2gig_technologies_ct101_thermostat_iris_temperature_42_1') }}
+            {{ states('sensor.upstairs_thermostat_temperature') }}
           {% elif temperature < us_low %}
             Cold
           {% elif temperature > us_high %}
@@ -138,15 +226,14 @@ sensor:
             Comfy
           {% endif %}
 
-
+#####################################################################
+### Script
+#####################################################################
 script:
-#####################################################################
-### Cool for 1 hour
-#####################################################################
   cool_upstairs_60min:
     sequence:
       - service: climate.set_operation_mode
-        entity_id: climate.2gig_technologies_ct101_thermostat_iris_cooling_1_42_2
+        entity_id: climate.upstairs_thermostat_cooling_1
         data:
           operation_mode: 'Cool'
 
@@ -167,13 +254,11 @@ script:
           entity_id: input_slider.upstairs_ac
           value: 83
 
-#####################################################################
-### Heat for 1 hour
-#####################################################################
+## Heat Upstairs 60 min
   heat_upstairs_60min:
     sequence:
       - service: climate.set_operation_mode
-        entity_id: climate.2gig_technologies_ct101_thermostat_iris_heating_1_42_1
+        entity_id: climate.upstairs_thermostat_heating_1
         data:
           operation_mode: 'Heat'
 
@@ -193,6 +278,5 @@ script:
         data_template:
           entity_id: input_slider.upstairs_heat
           value: 66
-
 
 # automation: (see automations folder)
