--- a/packages/device_trackers.yaml
+++ b/packages/device_trackers.yaml
@@ -1,55 +1,106 @@
 #####################################################################
 #    @package          :     device_trackers
-#    @description      :     device_trackers and associated automations, etc.
+#    @description      :     zones, device trackers and associated automations, etc.
 #####################################################################
 homeassistant:
   customize:
-# device_tracker customizations
+    ################################################
+    ## Node Anchors
+    ################################################
+    package.node_anchors:
+      customize: &customize
+        package: 'device_trackers'
+
+      contained: &contained
+        <<: *customize
+        haaska_hidden: true
+        homebridge_hidden: true
+
+      exposed: &exposed
+        <<: *customize
+        haaska_hidden: false
+        homebridge_hidden: false
+
+      hidden: &hidden
+        <<: *contained
+        hidden: true
+
+    ################################################
+    ## Group
+    ################################################
+    group.family:
+        <<: *contained
+
+    group.travel_rick:
+        <<: *contained
+
+    group.travel_megs:
+        <<: *contained
+
+
+    ################################################
+    ## Device Trackers
+    ################################################
     device_tracker.iphwn666:
+      <<: *contained
       friendly_name: "Rick"
       entity_picture: /local/rick.jpg
-      haaska_hidden: true
 
     device_tracker.iphone7:
+      <<: *contained
       friendly_name: "Megs"
       entity_picture: /local/megs.jpg
-      haaska_hidden: true
 
     sensor.rick_work_commute:
+      <<: *contained
       friendly_name: "Rick Commute to Work"
       icon: mdi:car
 
     sensor.rick_home_commute:
+      <<: *contained
       friendly_name: "Rick Commute Home"
       icon: mdi:car
 
     sensor.megs_work_commute:
+      <<: *contained
       friendly_name: "Megs Commute to Work"
       icon: mdi:car
 
     sensor.megs_home_commute:
+      <<: *contained
       friendly_name: "Megs Commute Home"
       icon: mdi:car
 
     sensor.rick_eta_home:
+      <<: *contained
       friendly_name: "Ricks ETA"
       icon: mdi:timer
 
     sensor.ricks_eta:
+      <<: *contained
       icon: mdi:timer
 
     sensor.megs_eta_home:
+      <<: *contained
       friendly_name: "Megs ETA"
       icon: mdi:timer
 
     sensor.megs_eta:
+      <<: *contained
       icon: mdi:timer
 
+  ################################################
+  ## Customize Domain
+  ################################################
+  customize_domain:
+    device_tracker:
+      <<: *contained
 
+
+################################################################
+## Device Tracker
+################################################################
 device_tracker:
-################################################################
-## DEVICE TRACKERS
-################################################################
   - platform: ddwrt
     host: !secret router_ip
     username: !secret router_user
@@ -58,6 +109,9 @@ device_tracker:
     consider_home: 180
 
 
+################################################################
+##  Group
+################################################################
 group:
   Family:
     entities:
@@ -79,6 +133,9 @@ group:
       - sensor.megs_work_commute
 
 
+################################################################
+##  Proximity
+################################################################
 proximity:
   home:
     ignored_zones:
@@ -91,46 +148,46 @@ proximity:
     unit_of_measurement: mi
 
 
+#####################################################################
+###  Sensor
+#####################################################################
 sensor:
-#####################################################################
-### GOOGLE TRAVEL
-#####################################################################
-# sensor: google travel time - Rick Work Commute
+## sensor: google travel time - Rick Work Commute
   - platform: google_travel_time
     name: Rick Work Commute
     api_key: !secret google_time_travel_api_key
     origin: Home
     destination: Rick Work
 
-# sensor: google travel time - Rick Home Commute
+## sensor: google travel time - Rick Home Commute
   - platform: google_travel_time
     name: Rick Home Commute
     api_key: !secret google_time_travel_api_key
     origin: Rick Work
     destination: Home
 
-# sensor: google travel time - Megs Work Commute
+## sensor: google travel time - Megs Work Commute
   - platform: google_travel_time
     name: Megs Work Commute
     api_key: !secret google_time_travel_api_key
     origin: Home
     destination: Megs Work
 
-# sensor: google travel time - Megs Home Commute
+## sensor: google travel time - Megs Home Commute
   - platform: google_travel_time
     name: Megs Home Commute
     api_key: !secret google_time_travel_api_key
     origin: Megs Work
     destination: Home
 
-  # tracker for ETA Home
+## tracker for ETA Home
   - platform: google_travel_time
     name: Megs ETA Home
     api_key: !secret google_time_travel_api_key
     origin: device_tracker.iphone7
     destination: Home
 
-  # tracker for ETA Home
+## tracker for ETA Home
   - platform: google_travel_time
     name: Rick ETA Home
     api_key: !secret google_time_travel_api_key
@@ -158,10 +215,11 @@ sensor:
           {% endif %}
 
 
+#####################################################################
+###  Automation
+#####################################################################
 automation:
-#####################################################################
-### Detect Away
-#####################################################################
+## Away Mode
   - alias: Away Mode
     trigger:
       platform: state
@@ -174,9 +232,7 @@ automation:
     action:
       - service: script.away
 
-#####################################################################
-### Cancel Away if we return
-#####################################################################
+## Away Cancel
   - alias: Away Mode Cancel
     trigger:
       platform: state
