--- a/packages/security_sensors.yaml
+++ b/packages/security_sensors.yaml
@@ -4,63 +4,100 @@
 #####################################################################
 homeassistant:
   customize:
-## Fibaro Motion
-    sensor.fibaro_state:
-      friendly_name: "Fibaro Motion Status"
+    ################################################
+    ## Node Anchors
+    ################################################
+    package.node_anchors:
+      customize: &customize
+        package: 'security_sensors'
+
+      contained: &contained
+        <<: *customize
+        haaska_hidden: true
+        homebridge_hidden: true
+
+      exposed: &exposed
+        <<: *customize
+        haaska_hidden: false
+        homebridge_hidden: false
+
+      hidden: &hidden
+        <<: *contained
+        hidden: true
+
+    ################################################
+    ## Sensor
+    ################################################
+    sensor.front_entry_motion:
+      <<: *contained
+      friendly_name: "Front Entry Motion"
       icon: mdi:run
 
-    sensor.fibaro_system_fgms001_motion_sensor_luminance_22_3:
-      friendly_name: "Fibaro Light Sensor"
+    sensor.front_entry_fibaro_multisensor_luminance:
+      <<: *contained
+      friendly_name: "Front Entry Light Sensor"
       icon: mdi:white-balance-sunny
 
-## Camera Sensors
     sensor.kitchen_ptz_motion_detected:
+      <<: *contained
       friendly_name: "Kitchen PTZ Motion"
       icon: mdi:run
 
     sensor.north_ptz_motion_detected:
+      <<: *contained
       friendly_name: "North PTZ Motion"
       icon: mdi:run
 
     sensor.kitchen_ptz_ptz_preset:
+      <<: *contained
       friendly_name: "Kitchen PTZ Preset"
       icon: mdi:arrow-expand-all
 
     sensor.north_ptz_ptz_preset:
+      <<: *contained
       friendly_name: "North PTZ Preset"
       icon: mdi:arrow-expand-all
 
     sensor.kitchen_ptz_sd_used:
+      <<: *contained
       friendly_name: "Kitchen PTZ SD Card"
       icon: mdi:sd
 
     sensor.north_ptz_sd_used:
+      <<: *contained
       friendly_name: "North PTZ SD Card"
       icon: mdi:sd
 
     sensor.crime:
+      <<: *contained
       icon: mdi:bomb
 
 
+#####################################################################
+### Group
+#####################################################################
 group:
   Sensors:
     entities:
-      - sensor.fibaro_state
+      - binary_sensor.living_room_occupancy
+      - binary_sensor.office_occupancy
+      - sensor.front_entry_motion
       - sensor.kitchen_ptz_motion_detected
       - sensor.north_ptz_motion_detected
-      - sensor.fibaro_system_fgms001_motion_sensor_luminance_22_3
+      - sensor.front_entry_fibaro_multisensor_luminance
       - sensor.crime
 
 
+#####################################################################
+### Sensor
+#####################################################################
 sensor:
-#####################################################################
 ### Fibaro Motion Detector status
-#####################################################################
   - platform: template
     sensors:
-      fibaro_state:
+      front_entry_motion:
         value_template: >-
-          {% set state = states('sensor.fibaro_system_fgms001_motion_sensor_burglar_22_10') %}
+          {% set state = states('sensor.front_entry_fibaro_multisensor_burglar') %}
           {% if state == '0' %}
             Idle
           {% elif state == '8' %}
@@ -73,9 +110,8 @@ sensor:
             {{ state|title }}
           {% endif %}
 
-#####################################################################
+
 ### Amcrest Camera Sensors
-#####################################################################
   - platform: amcrest
     host: !secret north_ptz_host
     port: !secret north_ptz_port
@@ -98,9 +134,8 @@ sensor:
   #    - sdcard
   #    - ptz_preset
 
-#####################################################################
+
 ### Crime Reports
-#####################################################################
   - platform: crimereports
     name: Crime
     radius: 4000
@@ -114,5 +149,3 @@ sensor:
     - Traffic
     - Vehicle Recovery
     - Vehicle Stop
-
-
