--- a/packages/weather.yaml
+++ b/packages/weather.yaml
@@ -4,91 +4,185 @@
 #####################################################################
 homeassistant:
   customize:
+    ################################################
+    ## Node Anchors
+    ################################################
+    package.node_anchors:
+      customize: &customize
+        package: 'weather'
 
+      contained: &contained
+        <<: *customize
+        haaska_hidden: true
+        homebridge_hidden: true
+
+      exposed: &exposed
+        <<: *customize
+        haaska_hidden: false
+        homebridge_hidden: false
+
+      hidden: &hidden
+        <<: *contained
+        hidden: true
+
+    ################################################
+    ## Group
+    ################################################
+    group.weather:
+      <<: *contained
+
+    group.weather_details:
+      <<: *contained
+
+    group.weather_summary:
+      <<: *contained
+
+    group.precipitation:
+      <<: *contained
+
+    ################################################
+    ## Input Boolean
+    ################################################
     input_boolean.rain:
-      haaska_hidden: true
+      <<: *contained
 
+    ################################################
+    ## Sensor
+    ################################################
     sensor.dark_sky_humidity:
+      <<: *contained
       friendly_name: "Humidity"
       icon: mdi:water-percent
+
     sensor.dark_sky_dew_point:
+      <<: *contained
       friendly_name: "Dew Point"
       icon: mdi:water
+
     sensor.dark_sky_daily_summary:
+      <<: *contained
       friendly_name: "Daily Summary"
       icon: mdi:calendar-clock
+
     sensor.dark_sky_pressure:
+      <<: *contained
       friendly_name: "Pressure"
       icon: mdi:nature
+
     sensor.dark_sky_temperature:
-      icon: mdi:thermometer
+      <<: *contained
       friendly_name: "Temperature"
+      icon: mdi:thermometer
+
     sensor.dark_sky_wind_speed:
-      icon: mdi:weather-windy
+      <<: *contained
       friendly_name: "Wind Speed"
+      icon: mdi:weather-windy
+
     sensor.dark_sky_summary:
+      <<: *contained
       friendly_name: "Current Conditions"
       icon: mdi:map-marker-radius
+
     sensor.dark_sky_precip_probability:
+      <<: *contained
       friendly_name: "Chance Rain"
       icon: mdi:weather-rainy
+
     sensor.dark_sky_precip_intensity:
+      <<: *contained
       friendly_name: "Predicted Rain"
       icon: mdi:weather-rainy
+
     sensor.dark_sky_visibility:
+      <<: *contained
       friendly_name: "Visibility"
+
     sensor.dark_sky_cloud_coverage:
+      <<: *contained
       friendly_name: "Cloud Cover"
       icon: mdi:weather-partlycloudy
+
     sensor.dark_sky_wind_bearing:
+      <<: *contained
       friendly_name: "Wind Bearing"
       icon: mdi:compass
+
     sensor.dark_sky_apparent_temperature:
+      <<: *contained
       friendly_name: "Feels Like"
+
     sensor.dark_sky_nearest_storm_distance:
+      <<: *contained
       friendly_name: "Nearest Storm"
       icon: mdi:weather-lightning-rainy
 
-  ## WUnderground PWS 
     sensor.pws_weather:
+      <<: *contained
       friendly_name: "Current Condition"
+
     sensor.pws_temp_f:
+      <<: *contained
       friendly_name: "Temperature"
+
     sensor.pws_feelslike_string:
+      <<: *contained
       friendly_name: "Feels Like"
       icon: mdi:thermometer
+
     sensor.pws_precip_today_string:
+      <<: *contained
       friendly_name: "Precipitation"
       icon: mdi:weather-rainy
+
     sensor.pws_wind_string:
+      <<: *contained
       friendly_name: "Wind"
       icon: mdi:weather-windy
+
     sensor.pws_heat_index_string:
+      <<: *contained
       friendly_name: "Heat Index"
       icon: mdi:weather-sunny
+
     sensor.pws_relative_humidity:
+      <<: *contained
       friendly_name: "Humidity"
       icon: mdi:water-percent
+
     sensor.pws_dewpoint_string:
+      <<: *contained
       friendly_name: "Dew Point"
       icon: mdi:water
+
     sensor.pws_pressure_in:
+      <<: *contained
       friendly_name: "Pressure Inches"
       icon: mdi:thermometer-lines
+
     sensor.pws_pressure_mb:
+      <<: *contained
       friendly_name: "Pressure Mbar"
       icon: mdi:nature
+
     sensor.pws_solarradiation:
+      <<: *contained
       friendly_name: "Radiation"
       icon: mdi:radioactive
+
     sensor.pws_uv:
+      <<: *contained
       friendly_name: "UV Index"
       icon: mdi:sunglasses
+
     sensor.pws_visibility_mi:
+      <<: *contained
       friendly_name: "Visibility"
 
 
-# group config
+#####################################################################
+### Group
+#####################################################################
 group:
   Weather Summary:
     entities:
@@ -122,10 +216,32 @@ group:
       - sensor.pws_visibility_mi
 
 
+#####################################################################
+### Input Slider
+#####################################################################
+input_slider:
+  ### Summer Temp Threshold
+  season_summer:
+    name: "Summer"
+    initial: 79
+    min: 60
+    max: 100
+    step: 1
+
+  ### Winter Temp Threshold
+  season_winter:
+    name: "Winter"
+    initial: 50
+    min: 40
+    max: 80
+    step: 1
+
+
+#####################################################################
+### Sensor
+#####################################################################
 sensor:
-#####################################################################
 ### Seasons
-#####################################################################
   - platform: template
     sensors:
       season:
@@ -144,9 +260,8 @@ sensor:
             Awesome
           {% endif %}
 
-#####################################################################
-### WEATHER
-#####################################################################
+
+### Weather
   - platform: moon
 
   - platform: wunderground
@@ -186,4 +301,24 @@ sensor:
       - precip_intensity_max
 
 
-#automation:
+#####################################################################
+### Automation
+#####################################################################
+automation:
+  - alias: rain sensor
+    hide_entity: True
+    trigger:
+      - platform: state
+        entity_id: sensor.pws_weather
+
+    action:
+      - service_template: >-
+          {% if is_state('sensor.pws_weather', 'Rain') %}
+            homeassistant.turn_on
+          {% elif is_state('sensor.pws_weather', 'Thunderstorm') %}
+            homeassistant.turn_on
+          {% else %}
+            homeassistant.turn_off
+          {% endif %}
+        data:
+          entity_id: input_boolean.rain
